monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/enum/Enum.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid.enum;

grammar Enum extends cocos.valid.Enum {

 A = "a";

}
